lib/translator/test/fixtures/ok/raw/var-expr.prg
PROGRAM var_expressions
BEGIN
    INT x
    X + 5
END
