lib/translator/test/fixtures/error/raw/var-with-func-name.prg
PROGRAM var_with_function_name
BEGIN
    INT log
END
